--- a/mountainsensing/z1-coap/Makefile
+++ b/mountainsensing/z1-coap/Makefile
@@ -1,6 +1,6 @@
 
-all: z1-sampler filename-test
-TARGET = z1-feshie
+all: z1-coap filename-test
+TARGET = z1-coap
 
 CONTIKI=../../
 
@@ -27,7 +27,7 @@ connect-router:	$(CONTIKI)/tools/tunslip6
 connect-router-cooja:	$(CONTIKI)/tools/tunslip6
 	sudo $(CONTIKI)/tools/tunslip6 -a 127.0.0.1 aaaa::1/64
 
-install: z1-sampler.upload
+install: z1-coap.upload
 
 CUSTOM_RULE_LINK=1 
 %.$(TARGET): %.co $(PROJECT_OBJECTFILES) $(PROJECT_LIBRARIES) contiki-$(TARGET).a $(LD) $(LDFLAGS) $(TARGET_STARTFILES) ${filter-out %.a,$^} ${filter %.a,$^} $(TARGET_LIBFILES) -o $@ -lm
