--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "cpu/cc26xx/lib/cc26xxware"]
 	path = cpu/cc26xx/lib/cc26xxware
 	url = https://github.com/g-oikonomou/cc26xxware.git
+[submodule "mountainsensing/protocol-buffers"]
+    path = mountainsensing/protocol-buffers
+    url = git@github.com:feshie/protocol-buffers.git
