--- a/mountainsensing/z1-coap/Makefile
+++ b/mountainsensing/z1-coap/Makefile
@@ -19,7 +19,7 @@ APPS += erbium er-coap rest-engine
 PROJECTDIRS += $(NANOPB) $(PROTOBUF)c/
 
 CFLAGS += -DPROJECT_CONF_H=\"project-conf.h\"
-CONTIKI_SOURCEFILES += pb_decode.c pb_encode.c pb_common.c all.c sampling-sensors.c filenames.c config.c sampler.c er-server.c res_hello.c
+CONTIKI_SOURCEFILES += pb_decode.c pb_encode.c pb_common.c all.c sampling-sensors.c filenames.c config.c sampler.c er-server.c res_hello.c res_date.c
 
 include $(CONTIKI)/Makefile.include
 
