Refactor the date support
Modify the ds3231 driver to use the standard tm struct for setting and
getting the time.
Add convenience functions for manipulating the UTC time and converting
it to the UNIX epoch in utc_time.h. This includes source adapted from
gmtime and mkgmtime.
Fix sampling-semsors to properly convert tm struct to epoch properly.

--- a/platform/z1-feshie/Makefile.common
+++ b/platform/z1-feshie/Makefile.common
@@ -19,7 +19,8 @@ ARCH=msp430.c leds.c watchdog.c xmem.c \
      battery-sensor.c sky-sensors.c tmp102.c temperature-sensor.c  \
       tlc59116.c \
      ds3231-sensor.c batv-sensor.c adc1-sensor.c adc2-sensor.c \
-     uart1-putchar.c ms1-io.c reset-sensor.c
+     uart1-putchar.c ms1-io.c reset-sensor.c \
+	 epoch_to_tm.c tm_to_epoch.c
 
 CONTIKI_TARGET_DIRS = . dev apps net
 ifndef CONTIKI_TARGET_MAIN
