Add --dirty --long to version generation
--dirty appends "-dirty" to a version when the working directory is not
clean.
--long prints the commit hash, and number of commits since a tag even
when HEAD is currently at a tag. This is consistent with when we're not
a tag, and can make it easier to find what commit we're at.

--- a/Makefile.include
+++ b/Makefile.include
@@ -192,7 +192,7 @@ CFLAGS += ${addprefix -I,$(SOURCEDIRS) $(CONTIKI)}
 ### Check for a git repo and pass version if found
 ### git.exe in Windows cmd shells may require no stderr redirection
 ifndef RELSTR
-RELSTR:=${shell git --git-dir ${CONTIKI}/.git describe --tags --always}
+RELSTR:=${shell git --git-dir ${CONTIKI}/.git describe --tags --always --long --dirty}
 endif
 
 ifneq ($(RELSTR),)
