--- a/platform/z1-wais/Makefile.z1-wais
+++ b/platform/z1-wais/Makefile.z1-wais
@@ -1,13 +1,9 @@
 # Common Makefile between Z1 and Z1SP
 
-CONTIKI_TARGET_SOURCEFILES += contiki-z1-platform.c 
+CONTIKI_TARGET_SOURCEFILES += contiki-z1-platform.c
 CLEAN += *.z1-wais
 
-include $(CONTIKI)/platform/z1/Makefile.common
-
-ifeq ($(ZOLERTIA_Z1SP),1)
-include $(CONTIKI)/platform/z1/Makefile.z1sp
-endif
+include $(CONTIKI)/platform/z1-wais/Makefile.common
 
 MODULES += core/net \
            core/net/mac core/net/mac/contikimac \
