--- a/platform/frdm-kl25z-rf/Makefile.frdm-kl25z-rf
+++ b/platform/frdm-kl25z-rf/Makefile.frdm-kl25z-rf
@@ -3,17 +3,11 @@ WITH_UIP=1
 
 MKL25ZRF =  
 
-#CODEPROP_SOURCES = codeprop-otf.c ram-segments.c
-
-#CONTIKI_PLATFORM=$(CONTIKI)/platform/frdm-kl25z-rf
-#CONTIKI_TARGET_MAIN = ${addprefix $(OBJECTDIR)/,contiki-main.o}
-
 CONTIKI_TARGET_DIRS = . dev apps net $(CONTIKI)/dev/cc1120 $(CONTIKI)/core/net
 #$(CONTIKI_PLATFORM) $(CONTIKI_CPU)
-# Master clock frequency
 
 #CFLAGS += -DWITH_UIP6=1 -DUIP_CONF_IPV6=1
-CFLAGS += -DWITH_UIP=1
+CFLAGS += -DWITH_UIP=1 -DUIP_CONF_IPV6=1
 
 #WITH_UIP6=1
 #UIP_CONF_IPV6=1
@@ -26,20 +20,13 @@ CPLATFLAGS += -DAUTOSTART_ENABLE -DCC11xx_CC1120=1 -I$(CONTIKI)/dev/cc1120
 #PCFLAGS += -I$(CONTIKI)/dev/cc1120 -DCC11xx_CC1120=1 
 
 ifndef CONTIKI_TARGET_MAIN
-CONTIKI_TARGET_MAIN = contiki-main.c cc1120-mkl25z-rf-arch.c cc11xx.c symbols.c
+CONTIKI_TARGET_MAIN = contiki-main.c cc1120-mkl25z-rf-arch.c cc1120.c symbols.c
 endif
 
 CONTIKI_TARGET_SOURCEFILES += $(SENSORS) $(STEPPER_ROBOT) \
  $(CODEPROP_SOURCES) $(CONTIKI_TARGET_MAIN) 
 
-# include $(CONTIKI)/platform/$(TARGET)/apps/Makefile.apps
-
 include $(CONTIKI)/cpu/arm/mkl25z/Makefile.mkl25z
-include $(CONTIKI)/dev/cc1120/Makefile.cc1120
 
-#contiki-$(TARGET).a: ${addprefix $(OBJECTDIR)/,symbols.o}
 
-ifndef BASE_IP
-BASE_IP := 172.16.1.1
-endif
 
