--- a/platform/frdm-kl25z-rf/Makefile.frdm-kl25z-rf
+++ b/platform/frdm-kl25z-rf/Makefile.frdm-kl25z-rf
@@ -3,7 +3,7 @@ WITH_UIP=1
 
 MKL25ZRF =  
 
-CONTIKI_TARGET_DIRS = . dev apps net $(CONTIKI)/dev/cc1120 $(CONTIKI)/core/net
+CONTIKI_TARGET_DIRS = $(CONTIKI)/dev/cc1120 $(CONTIKI)/core/net
 #$(CONTIKI_PLATFORM) $(CONTIKI_CPU)
 
 #CFLAGS += -DWITH_UIP6=1 -DUIP_CONF_IPV6=1
@@ -16,15 +16,16 @@ CFLAGS += -DWITH_UIP=1 -DUIP_CONF_IPV6=1
 
 
 MCK = 48000000
-CPLATFLAGS += -DAUTOSTART_ENABLE -DCC11xx_CC1120=1 -I$(CONTIKI)/dev/cc1120 
+#CPLATFLAGS += -DAUTOSTART_ENABLE  
 #PCFLAGS += -I$(CONTIKI)/dev/cc1120 -DCC11xx_CC1120=1 
 
 ifndef CONTIKI_TARGET_MAIN
-CONTIKI_TARGET_MAIN = contiki-main.c cc1120-mkl25z-rf-arch.c cc1120.c symbols.c
+CONTIKI_TARGET_MAIN = contiki-main.c cc1120-mkl25z-rf-arch.c cc1120.c cc1120-config.c symbols.c
 endif
 
-CONTIKI_TARGET_SOURCEFILES += $(SENSORS) $(STEPPER_ROBOT) \
- $(CODEPROP_SOURCES) $(CONTIKI_TARGET_MAIN) 
+CONTIKI_TARGET_SOURCEFILES += $(SENSORS) $(CONTIKI_TARGET_MAIN) 
+
+MODULES += core/net core/net/mac core/net/mac/contikimac core/net/llsec
 
 include $(CONTIKI)/cpu/arm/mkl25z/Makefile.mkl25z
 
