--- a/platform/frdm-kl25z-rf/Makefile.frdm-kl25z-rf
+++ b/platform/frdm-kl25z-rf/Makefile.frdm-kl25z-rf
@@ -1,29 +1,14 @@
-
-WITH_UIP=1
-
 MKL25ZRF =  
 
 CONTIKI_TARGET_DIRS = $(CONTIKI)/dev/cc1120 $(CONTIKI)/core/net
-#$(CONTIKI_PLATFORM) $(CONTIKI_CPU)
 
-#CFLAGS += -DWITH_UIP6=1 -DUIP_CONF_IPV6=1
-CFLAGS += -DWITH_UIP=1 -DUIP_CONF_IPV6=1
-
-#WITH_UIP6=1
-#UIP_CONF_IPV6=1
-#CFLAGS+= -DUIP_CONF_IPV6
-#CFLAGS+= -DUIP_CONF_IPV6_RPL
-
+CFLAGS+= -DWITH_UIP6 -DUIP_CONF_IPV6 -DAUTOSTART_ENABLE 
 
 MCK = 48000000
-#CPLATFLAGS += -DAUTOSTART_ENABLE  
+#CPLATFLAGS +=  
 #PCFLAGS += -I$(CONTIKI)/dev/cc1120 -DCC11xx_CC1120=1 
 
-ifndef CONTIKI_TARGET_MAIN
-CONTIKI_TARGET_MAIN = contiki-main.c cc1120-mkl25z-rf-arch.c cc1120.c cc1120-config.c symbols.c
-endif
-
-CONTIKI_TARGET_SOURCEFILES += $(SENSORS) $(CONTIKI_TARGET_MAIN) 
+CONTIKI_TARGET_SOURCEFILES += contiki-main.c cc1120-config.c cc1120-mkl25z-rf-arch.c cc1120.c
 
 MODULES += core/net core/net/mac core/net/mac/contikimac core/net/llsec
 
