--- a/platform/zoul/Makefile.zoul
+++ b/platform/zoul/Makefile.zoul
@@ -26,9 +26,21 @@ PLATFORM_ROOT_DIR = $(CONTIKI)/platform/$(TARGET)
 
 ### Include
 CONTIKI_TARGET_SOURCEFILES += contiki-main.c
-CONTIKI_TARGET_SOURCEFILES += leds.c leds-arch.c cc1200-zoul-arch.c
+CONTIKI_TARGET_SOURCEFILES += leds.c leds-arch.c
 CONTIKI_TARGET_SOURCEFILES += adc-zoul.c button-sensor.c zoul-sensors.c
 CONTIKI_TARGET_SOURCEFILES += $(BOARD_SOURCEFILES)
+
+### Include relevant radio files and define radio.
+ifeq ($(RADIO),cc1120)
+  CONTIKI_TARGET_SOURCEFILES += cc1120-zoul-arch.c cc1120-config.c
+  MODULES += dev/cc1120
+  CFLAGS += -DZOUL_RADIO=cc1120
+else
+  CONTIKI_TARGET_SOURCEFILES += cc1200-zoul-arch.c
+  MODULES += dev/cc1200
+  CFLAGS += -DZOUL_RADIO=cc1200
+endif
+
 
 CONTIKI_SOURCEFILES += $(CONTIKI_TARGET_SOURCEFILES)
 
@@ -45,7 +57,7 @@ include $(CONTIKI_CPU)/Makefile.cc2538
 
 MODULES += core/net core/net/mac \
            core/net/mac/contikimac \
-           core/net/llsec core/net/llsec/noncoresec dev/cc1200
+           core/net/llsec core/net/llsec/noncoresec
 
 BSL = $(CONTIKI)/tools/cc2538-bsl/cc2538-bsl.py
 
