Bugfixes to make the CC1120 driver work with 1200 as expected.

--- a/platform/z1-feshie/Makefile.z1-feshie
+++ b/platform/z1-feshie/Makefile.z1-feshie
@@ -9,4 +9,5 @@ include $(CONTIKI)/platform/z1-feshie/Makefile.common
 
 MODULES += core/net \
            core/net/mac core/net/mac/contikimac \
-           core/net/llsec
+           core/net/llsec dev/cc1120
+
