--- a/platform/z1-feshie/Makefile.common
+++ b/platform/z1-feshie/Makefile.common
@@ -1,3 +1,5 @@
+# Common Makefile between the Z1 and Z1SP
+
 ifdef GCC
 CFLAGS+=-Os -g
 endif
@@ -11,24 +13,18 @@ endif
 CLEAN += symbols.c symbols.h
 
 ARCH=msp430.c leds.c watchdog.c xmem.c \
-     spi.c cc1120-arch-z1.c \
+     spi.c cc1120-arch-z1.c\
      node-id.c sensors.c button-sensor.c cfs-coffee.c \
      uart0.c uart0-putchar.c uip-ipchksum.c \
-     slip.c slip_uart0.c \
-     battery-sensor.c sky-sensors.c tmp102.c temperature-sensor.c  \
-     ds3231-sensor.c batv-sensor.c adc1-sensor.c adc2-sensor.c \
-     uart1-putchar.c ms1-io.c reset-sensor.c \
-	 epoch_to_tm.c tm_to_epoch.c
-
-MODULES += dev/cc1120
+     slip.c slip_uart0.c\
+     battery-sensor.c sky-sensors.c tmp102.c temperature-sensor.c\
+     ds3231-sensor.c batv-sensor.c adc1-sensor.c adc2-sensor.c\
+     uart1-putchar.c ms1-io.c reset-sensor.c\
+     epoch_to_tm.c tm_to_epoch.c
 
 CONTIKI_TARGET_DIRS = . dev apps net
 ifndef CONTIKI_TARGET_MAIN
 CONTIKI_TARGET_MAIN = contiki-z1-main.c
-endif
-
-ifeq ($(UIP_CONF_IPV6),1)
-CFLAGS += -DWITH_UIP6=1
 endif
 
 ifdef nodemac
@@ -39,7 +35,10 @@ CONTIKI_TARGET_SOURCEFILES += $(ARCH) $(UIPDRIVERS)
 CONTIKI_TARGET_SOURCEFILES += i2cmaster.c adxl345.c
 
 MCU=msp430f2617
+
+# Platform has a MSP430X MCU with 20-bit support
 CPU_HAS_MSP430X=1
+
 include $(CONTIKI)/cpu/msp430/Makefile.msp430
 
 # Add LDFLAGS after IAR_PATH is set
@@ -59,12 +58,11 @@ ifeq ($(HOST_OS),Darwin)
   ifndef MOTELIST
       USBDEVPREFIX=
       SERIALDUMP = $(CONTIKI)/tools/sky/serialdump-linux
-      MOTELIST = $(CONTIKI)/tools/z1/motelist-z1-macos
-      BSL = $(CONTIKI)/tools/z1/z1-bsl-nopic --z1
+      MOTELIST = $(CONTIKI)/tools/zolertia/motelist-zolertia-macos
+      BSL = $(CONTIKI)/tools/zolertia/z1-bsl-nopic --z1
       BSL_FILETYPE = -I
-      MOTES = $(shell $(MOTELIST) -c 2>&- | \
+      MOTES = $(shell $(MOTELIST) -b z1 -c 2>&- | \
               cut -f 2 -d ,)
-      CMOTES=$(MOTES)
       REFNUM = $(shell $(MOTELIST) -c 2>&- | \
                cut -f 1 -d , | tail -c5 | sed 's/^0*//')
       ifneq (,$(REFNUM))
@@ -79,10 +77,10 @@ else
     ifndef MOTELIST
       USBDEVPREFIX=
       SERIALDUMP = $(CONTIKI)/tools/sky/serialdump-linux
-      MOTELIST = $(CONTIKI)/tools/z1/motelist-z1
-      BSL = $(CONTIKI)/tools/z1/z1-bsl-nopic --z1
+      MOTELIST = $(CONTIKI)/tools/zolertia/motelist-zolertia
+      BSL = $(CONTIKI)/tools/zolertia/z1-bsl-nopic --z1
       BSL_FILETYPE = -I
-      MOTES = $(shell $(MOTELIST) -c 2>&- | \
+      MOTES = $(shell $(MOTELIST) -b z1 -c 2>&- | \
               cut -f 2 -d , | \
               perl -ne 'print $$1 . " " if(m-(/dev/\w+)-);')
       CMOTES=$(MOTES)
@@ -97,12 +95,10 @@ else
     endif
 endif
 
-
-
-motelist: z1-motelist
-
-z1-motelist:
+motelist:
 	$(MOTELIST)
+z1-motelist:
+	$(MOTELIST) -b z1
 z1-motes:
 	@echo $(MOTES)
 
