CC1120 driver tweaks for stability & performance.
Added project config file for the z1-nothing example.

--- a/mountainsensing/z1-nothing/Makefile
+++ b/mountainsensing/z1-nothing/Makefile
@@ -3,6 +3,8 @@ TARGET = z1-feshie
 
 CONTIKI=../../
 
+DEFINES+=PROJECT_CONF_H=\"project-conf.h\"
+
 CONTIKI_WITH_IPV6=1
 CFLAGS += -DUIP_CONF_IPV6=1
 
