--- a/platform/z1-feshie/Makefile.common
+++ b/platform/z1-feshie/Makefile.common
@@ -19,7 +19,7 @@ ARCH=msp430.c leds.c watchdog.c xmem.c \
      slip.c slip_uart0.c\
      battery-sensor.c sky-sensors.c tmp102.c temperature-sensor.c\
      ds3231-sensor.c batv-sensor.c adc1-sensor.c adc2-sensor.c\
-     uart1-putchar.c ms1-io.c reset-sensor.c\
+     uart1-putchar.c reset-sensor.c\
      epoch_to_tm.c tm_to_epoch.c
 
 CONTIKI_TARGET_DIRS = . dev apps net
