Add lokcing manager for LPM levels
Add a wrapper (POWER SHERIFF!) for modifying the max LPM level at run time, that keeps
track of the number of "incomplete" / "ongoing" high power mode
requests, and only enters low power mode when they have all been
completed.

Update ms-io to use this new interface instead of directly using the lpm
one.

--- a/platform/zoul/muntjac/Makefile.muntjac
+++ b/platform/zoul/muntjac/Makefile.muntjac
@@ -1,2 +1,2 @@
 MOTELIST_ZOLERTIA = muntjac
-BOARD_SOURCEFILES += board.c reset-sensor.c xmem.c ds3231-sensor.c
+BOARD_SOURCEFILES += board.c reset-sensor.c xmem.c ds3231-sensor.c power-sheriff.c
