Zoul: Add support for RADIO=null
Add support for the nullradio_driver as a build system parameter.

--- a/platform/zoul/Makefile.zoul
+++ b/platform/zoul/Makefile.zoul
@@ -35,6 +35,8 @@ else ifeq ($(RADIO),cc1200)
   CONTIKI_TARGET_SOURCEFILES += cc1200-zoul-arch.c
   MODULES += dev/cc1200
   CFLAGS += -DZOUL_RADIO=1200
+else ifeq ($(RADIO),null)
+  CFLAGS += -DZOUL_RADIO=0
 else
   CFLAGS += -DZOUL_RADIO=2538
 endif
